--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Programação Web</title>
 
-    <link rel="icon" href="" type="image/gif" sizes="16x16">
+    <link rel="shortcut icon" href="media/images/icons/favicon1.ico" type="image/x-icon">
+    <link rel="icon" href="media/images/icons/favicon1.ico" type="image/x-icon">
 
     <script src="js/swapCss.js">
     </script>
@@ -34,7 +35,7 @@
         <div class="icon css2" style="background-image: url('media/images/icons/logotipo_ft.png')"></div>
         <div class="icon css2" style="background-image: url('media/images/icons/logo_unicamp.svg')"></div>
 
-    <div>
+    <div class="pageTitle">
         <h1>Grupo Xablau- SI401B</h1>
     </div>
 
@@ -54,15 +55,23 @@
 
 <!-- CONTEÚDO -->
 <section class="content">
-    <h1>Objetivos do grupo na disciplina</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+    <h1><div class="icon" style="background-image: url('media/images/icons/icons8-Center of Gravity.png'); min-height: 40pt"></div>Objetivos</h1>
+    <ul>
+        <li>
+            Aprender as melhores formas de criação de páginas web usando HTML e CSS.
+        </li>
+        <li>
+            Aprender a desenvolver scripts para execução em servidores web.
+        </li>
+        <li>
+            Aprender a projetar e gerenciar projetos de aplicações web.
+        </li>
+        <li>
+            Utilizar a arquitetura cliente-servidor em sistemas web.
+        </li>
+    </ul>
 
-    <h1>Integrantes do grupo</h1>
+    <h1><div class="icon" style="background-image: url('media/images/icons/icons8-User Group Man Woman.png'); min-height: 40pt"></div>Integrantes</h1>
     <div class="flexContent flexNoWrap">
 
         <!-- PESSOA -->
@@ -126,9 +135,9 @@
         </div>
     </div>
 
-    <h1>Contato com o grupo</h1>
+    <h1><div class="icon" style="background-image: url('media/images/icons/icons8-Message.png'); min-height: 40pt"></div>Contato</h1>
     <p>
-        O grupo pode ser contatado através do e-mail
+        O grupo pode ser contatado através do e-mail:
         <a href="mailto:grupoxablau2017@gmail.com" target="_top">grupoxablau2017@gmail.com</a>
     </p>
 
@@ -139,7 +148,7 @@
         <ul>
 
             <li><a href="index.html">Página inicial</a></li>
-            <li><a href="">Grupo</a>
+            <li><a href="html/group.html">Grupo</a>
                 <ul>
                     <li><a href="html/group/andre.html">André</a></li>
                     <li><a href="html/group/mayara.html">Mayara</a></li>
@@ -149,18 +158,18 @@
                 </ul>
             </li>
 
-            <li><a href="">Mídia</a>
+            <li><a href="html/media.html">Mídia</a>
                 <ul>
-                    <li><a href="">Audio</a></li>
-                    <li><a href="">Video</a></li>
-                    <li><a href="">Links</a></li>
+                    <li><a href="html/media.html#audio">Audio</a></li>
+                    <li><a href="html/media.html#video">Video</a></li>
+                    <li><a href="html/media.html#css">Links</a></li>
                 </ul>
             </li>
-            <li><a href="">Conceitos utilizados</a>
+            <li><a href="html/concepts.html">Conceitos utilizados</a>
                 <ul>
-                    <li><a href="">HTML</a></li>
-                    <li><a href="">CSS</a></li>
-                    <li><a href="">Outros</a></li>
+                    <li><a href="html/concepts.html#html">HTML</a></li>
+                    <li><a href="html/concepts.html#css">CSS</a></li>
+                    <li><a href="html/concepts.html#other">Outros</a></li>
                 </ul>
             </li>
         </ul>
@@ -176,33 +185,8 @@
         <strong>Contato: </strong><a href="mailto:grupoxablau2017@gmail.com" target="_top">grupoxablau2017@gmail.com</a><br>
         Projeto no <a href="https://github.com/ALREstevam/Programacao-Web-T1" target="_blank">GitHub</a>
     </p>
-
-
-
-
-
-
+    <a href="https://icons8.com">Icon pack by Icons8</a>
 </footer>
-
-
-<!--
-
-[11:47, 11/9/2017] PÁGINA (x1): Página inicial | SEÇÕES: objetivos, formas de contato com o grupo, links para a página de cada membro
-[11:47, 11/9/2017] PÁGINA (x5): Membro do grupo | SEÇÕES: breve currículo e biografia, trabalhos feitos em outras disciplinas
-[11:47, 11/9/2017] PÁGINA (x1): Mídia | SEÇÕES: PARTE1: Links  PARTE 2: vídeos e áudios (talvez indicando para cada item quem o adicionou).
-[11:47, 11/9/2017] PÁGINA (x1): Conceitos HTML e CSS: | SEÇÕES: Conceitos de html não vistos em aula e Conceitos de css não vistos em aula
-
-<div class="flexContent">
-        <div class="box small border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
-        <div class="box full border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
-        <div class="box medium  border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
-        <div class="box small  border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
-        <div class="box small  border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
-        <div class="box medium border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
-    </div>
-
--->
-
 
 </body>
 </html>
