--- a/site/html/group/andre.html
+++ b/site/html/group/andre.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Programação Web</title>
 
-    <link rel="icon" href="" type="image/gif" sizes="16x16">
+    <link rel="shortcut icon" href="../../media/images/icons/favicon1.ico" type="image/x-icon">
+    <link rel="icon" href="../../media/images/icons/favicon1.ico" type="image/x-icon">
 
     <script src="../../js/swapCss.js">
     </script>
@@ -52,7 +53,45 @@
 
 <!-- CONTEÚDO -->
 <section class="content">
-    <h1>Integrante do grupo: </h1>
+    <h1>André L. R. Estevam</h1>
+    <h2>Biografia</h2>
+    <p><strong>Cidade de nascimento:</strong> Registro-SP</p>
+    <p><strong>Nascimento:</strong> 1997</p>
+    <p><strong>Residência:</strong> Nova Odessa-SP</p>
+
+    <h2>Currículo</h2>
+
+    <p><strong>Ensino Médio (2013-2015):</strong> ETEC Polivalente de Americana;</p>
+    <p><strong>Ensino Técnico (2013-2015):</strong> ETEC Polivalente de Americana - Curso Técnico em Informática;</p>
+    <p><strong>Trabalho de Conclusão de Curso:</strong> Software Ekonomi - Plataforma Desktop e Web para gerenciamento de finanças pessoais;</p>
+    <p><strong>Graduação (2016-):</strong> Faculdade de Tecnologia da Unicamp (Limeira)- Bacharelado em Sistemas de Informação;</p>
+
+    <h2>Trabalhos realizados</h2>
+
+    <ul class="coollist">
+        <li><span>Segundo semestre de 2016:</span>
+            <ul>
+                <li>Pesquisa/seminário: <strong>algoritmo de ordenação quicksort</strong> <em>(para a disciplina de Estrutura de Dados)</em>: [<a href="https://1drv.ms/f/s!AvKd5zYHvusR1FyE7bcObMYbzwqu" target="_blank">1drv.ms/...</a>]</li>
+            </ul>
+        </li>
+        <li><span>Primeiro semestre de 2017:</span>
+            <ul>
+                <li>Projeto: <strong>agenda pessoal no estilo kanban (em C#)</strong> <em>(para a disciplina de Engenharia de Software II)</em>: [<a href="https://github.com/ALREstevam/SI304B-Projeto-Agenda-Engenharia-de-Software-II" target="_blank">github.com/ALREstevam/SI304B-Projeto-Agenda-Engenharia-de-Software-II</a>]</li>
+            </ul>
+            <ul>
+                <li>Projeto: <strong>Software para realizar a soma das diagonais de uma matriz usando múltiplas threads (em C)</strong> <em>(para a disciplina de Sistemas Operacionais)</em>[<a href="https://github.com/ALREstevam/SO-Soma_de_diagonais_de_matriz_com_threads" target="_blank">github.com/ALREstevam/SO-Soma_de_diagonais_de_matriz_com_threads</a>]</li>
+            </ul>
+        </li>
+        <li>
+            <span>Segundo semestre de 2017:</span>
+            <ul>
+                <li>Estudos e exercícios: <strong>programação em Python</strong> <em>(para a disciplina de Resolução de Problemas II)</em>[<a href="" target="_blank"></a>]</li>
+                <li>Testes: <strong>com o Hibernate (Framework de persistência para o Java)</strong> <em>(para a disciplina de Engenharia de Software III)</em>[<a href="https://github.com/ALREstevam/Hibernate-Java" target="_blank">github.com/ALREstevam/Hibernate-Java</a>]</li>
+                <li>Projeto: <strong>gerenciamento de visita a clientes para vidraçaria (em Java)</strong> <em>(para a disciplina de Programação Orientada a Objetos II)</em>[<a href="https://github.com/ALREstevam/POOII-Gerenc-Visitas-Vidracaria" target="_blank">github.com/ALREstevam/POOII-Gerenc-Visitas-Vidracaria</a>]</li>
+                <li>Projeto: <strong>site para grupo de estudantes (HTML5, CSS3 e Javascript)</strong> <em>(para a disciplina de Programação para a Web)</em>[<a href="https://github.com/ALREstevam/Programacao-Web-T1" target="_blank">github.com/ALREstevam/Programacao-Web-T1</a>]</li>
+            </ul>
+        </li>
+    </ul>
 
 </section>
 
@@ -60,34 +99,36 @@
     <nav class="sideMenu">
         <ul>
 
-            <li><a href="">Página inicial</a></li>
-            <li><a href="">Grupo</a>
+            <li><a href="../../index.html">Página inicial</a></li>
+            <li><a href="../group.html">Grupo</a>
                 <ul>
-                    <li><a href="">André</a></li>
-                    <li><a href="">Mayara</a></li>
-                    <li><a href="">Pedro</a></li>
-                    <li><a href="">Huanna</a></li>
-                    <li><a href="">Karen</a></li>
+                    <li><a href="andre.html">André</a></li>
+                    <li><a href="mayara.html">Mayara</a></li>
+                    <li><a href="pedro.html">Pedro</a></li>
+                    <li><a href="huanna.html">Huanna</a></li>
+                    <li><a href="karen.html">Karen</a></li>
                 </ul>
             </li>
 
-            <li><a href="">Mídia</a>
+            <li><a href="../media.html">Mídia</a>
                 <ul>
-                    <li><a href="">Audio</a></li>
-                    <li><a href="">Video</a></li>
-                    <li><a href="">Links</a></li>
+                    <li><a href="../media.html#audio">Audio</a></li>
+                    <li><a href="../media.html#video">Video</a></li>
+                    <li><a href="../media.html#links">Links</a></li>
                 </ul>
             </li>
-            <li><a href="">Conceitos utilizados</a>
+            <li><a href="../concepts.html">Conceitos utilizados</a>
                 <ul>
-                    <li><a href="">HTML</a></li>
-                    <li><a href="">CSS</a></li>
-                    <li><a href="">Outros</a></li>
+                    <li><a href="../concepts.html#html">HTML</a></li>
+                    <li><a href="../concepts.html#css">CSS</a></li>
+                    <li><a href="../concepts.html#other">Outros</a></li>
                 </ul>
             </li>
         </ul>
     </nav>
 
+    
+    
 </section>
 
 
@@ -98,12 +139,7 @@
         <strong>Contato: </strong><a href="mailto:grupoxablau2017@gmail.com" target="_top">grupoxablau2017@gmail.com</a><br>
         Projeto no <a href="https://github.com/ALREstevam/Programacao-Web-T1" target="_blank">GitHub</a>
     </p>
-
-
-
-
-
-
+    <a href="https://icons8.com">Icon pack by Icons8</a>
 </footer>
 </body>
 </html>
