--- a/site/html/group.html
+++ b/site/html/group.html
@@ -13,7 +13,7 @@
 
     <link type="text/css" rel="stylesheet" href="../styles/tests/testStylesheet.css">
     <link type="text/css" rel="stylesheet" href="../styles/common/commonStylesheet.css">
-    <link type="text/css" rel="stylesheet" href="" id="swappableCss">
+    <link type="text/css" rel="stylesheet" href="../styles/common/commonStylesheet.css" id="swappableCss">
 
     <script>
         setSheetList(['../styles/style1/css1.css','../styles/style2/css2.css']);
@@ -38,7 +38,7 @@
     </div>
 
     <!-- MENU -->
-    <section class="menu">
+    <div class="menu">
         <!-- MENU -->
         <nav class="menu">
             <ul>
@@ -48,12 +48,12 @@
                 <li><a href="concepts.html">Conceitos utilizados</a></li>
             </ul>
         </nav>
-    </section>
+    </div>
 </header>
 
 <!-- CONTEÚDO -->
 <section class="content">
-    <h1>Integrantes do grupo</h1>
+    <h2>Integrantes do grupo</h2>
     <div class="flexContent flexNoWrap">
 
         <!-- PESSOA -->
@@ -111,13 +111,13 @@
                 </div>
             </a>
             <p class="centralizedText">
-                <a href=group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+                <a href="group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
             </p>
             <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
         </div>
     </div>
 
-    <h1>Contato com o grupo</h1>
+    <h2>Contato com o grupo</h2>
     <p>
         O grupo pode ser contatado através do e-mail
         <a href="mailto:grupoxablau2017@gmail.com" target="_top">grupoxablau2017@gmail.com</a>
@@ -125,12 +125,12 @@
 
 </section>
 
-<section class="sidebar css2">
+<div class="sidebar css2">
     <nav class="sideMenu">
         <ul>
 
             <li><a href="../index.html">Página inicial</a></li>
-            <li><a href="">Grupo</a>
+            <li><a href="group.html">Grupo</a>
                 <ul>
                     <li><a href="group/andre.html">André</a></li>
                     <li><a href="group/mayara.html">Mayara</a></li>
@@ -140,14 +140,14 @@
                 </ul>
             </li>
 
-            <li><a href="">Mídia</a>
+            <li><a href="media.html">Mídia</a>
                 <ul>
                     <li><a href="media.html#audio">Audio</a></li>
                     <li><a href="media.html#video">Video</a></li>
                     <li><a href="media.html#links">Links</a></li>
                 </ul>
             </li>
-            <li><a href="">Conceitos utilizados</a>
+            <li><a href="concepts.html">Conceitos utilizados</a>
                 <ul>
                     <li><a href="concepts.html#html">HTML</a></li>
                     <li><a href="concepts.html#css">CSS</a></li>
@@ -157,10 +157,10 @@
         </ul>
     </nav>
 
-</section>
+</div>
 
 
-<!-- FOOTET -->
+<!-- FOOTER -->
 <footer class="footer centralizedText">
     <p>
         Website desenvolvido para a disciplina de Programação Web<br>
