--- a/site/html/group/andre.html
+++ b/site/html/group/andre.html
@@ -13,7 +13,7 @@
 
     <link type="text/css" rel="stylesheet" href="../../styles/tests/testStylesheet.css">
     <link type="text/css" rel="stylesheet" href="../../styles/common/commonStylesheet.css">
-    <link type="text/css" rel="stylesheet" href="" id="swappableCss">
+    <link type="text/css" rel="stylesheet" href="../../styles/common/commonStylesheet.css" id="swappableCss">
 
     <script>
         setSheetList(['../../styles/style1/css1.css','../../styles/style2/css2.css']);
@@ -38,7 +38,7 @@
     </div>
 
     <!-- MENU -->
-    <section class="menu">
+    <div class="menu">
         <!-- MENU -->
         <nav class="menu">
             <ul>
@@ -48,25 +48,25 @@
                 <li><a href="../concepts.html">Conceitos utilizados</a></li>
             </ul>
         </nav>
-    </section>
+    </div>
 </header>
 
 <!-- CONTEÚDO -->
 <section class="content">
-    <h1>André L. R. Estevam</h1>
-    <h2>Biografia</h2>
+    <h2>André L. R. Estevam</h2>
+    <h3>Biografia</h3>
     <p><strong>Cidade de nascimento:</strong> Registro-SP</p>
     <p><strong>Nascimento:</strong> 1997</p>
     <p><strong>Residência:</strong> Nova Odessa-SP</p>
 
-    <h2>Currículo</h2>
+    <h3>Currículo</h3>
 
     <p><strong>Ensino Médio (2013-2015):</strong> ETEC Polivalente de Americana;</p>
     <p><strong>Ensino Técnico (2013-2015):</strong> ETEC Polivalente de Americana - Curso Técnico em Informática;</p>
     <p><strong>Trabalho de Conclusão de Curso:</strong> Software Ekonomi - Plataforma Desktop e Web para gerenciamento de finanças pessoais;</p>
     <p><strong>Graduação (2016-):</strong> Faculdade de Tecnologia da Unicamp (Limeira)- Bacharelado em Sistemas de Informação;</p>
 
-    <h2>Trabalhos realizados</h2>
+    <h3>Trabalhos realizados</h3>
 
     <ul class="coollist">
         <li><span>Segundo semestre de 2016:</span>
@@ -79,23 +79,23 @@
                 <li>Projeto: <strong>agenda pessoal no estilo kanban (em C#)</strong> <em>(para a disciplina de Engenharia de Software II)</em>: [<a href="https://github.com/ALREstevam/SI304B-Projeto-Agenda-Engenharia-de-Software-II" target="_blank">github.com/ALREstevam/SI304B-Projeto-Agenda-Engenharia-de-Software-II</a>]</li>
             </ul>
             <ul>
-                <li>Projeto: <strong>Software para realizar a soma das diagonais de uma matriz usando múltiplas threads (em C)</strong> <em>(para a disciplina de Sistemas Operacionais)</em>[<a href="https://github.com/ALREstevam/SO-Soma_de_diagonais_de_matriz_com_threads" target="_blank">github.com/ALREstevam/SO-Soma_de_diagonais_de_matriz_com_threads</a>]</li>
+                <li>Projeto: <strong>Software para realizar a soma das diagonais de uma matriz usando múltiplas threads (em C) </strong> <em>(para a disciplina de Sistemas Operacionais): </em><br/>&nbsp;[<a href="https://github.com/ALREstevam/SO-Soma_de_diagonais_de_matriz_com_threads" target="_blank">github.com/ALREstevam/SO-Soma_de_diagonais_de_matriz_com_threads</a>]</li>
             </ul>
         </li>
         <li>
             <span>Segundo semestre de 2017:</span>
             <ul>
-                <li>Estudos e exercícios: <strong>programação em Python</strong> <em>(para a disciplina de Resolução de Problemas II)</em>[<a href="" target="_blank"></a>]</li>
-                <li>Testes: <strong>com o Hibernate (Framework de persistência para o Java)</strong> <em>(para a disciplina de Engenharia de Software III)</em>[<a href="https://github.com/ALREstevam/Hibernate-Java" target="_blank">github.com/ALREstevam/Hibernate-Java</a>]</li>
-                <li>Projeto: <strong>gerenciamento de visita a clientes para vidraçaria (em Java)</strong> <em>(para a disciplina de Programação Orientada a Objetos II)</em>[<a href="https://github.com/ALREstevam/POOII-Gerenc-Visitas-Vidracaria" target="_blank">github.com/ALREstevam/POOII-Gerenc-Visitas-Vidracaria</a>]</li>
-                <li>Projeto: <strong>site para grupo de estudantes (HTML5, CSS3 e Javascript)</strong> <em>(para a disciplina de Programação para a Web)</em>[<a href="https://github.com/ALREstevam/Programacao-Web-T1" target="_blank">github.com/ALREstevam/Programacao-Web-T1</a>]</li>
+                <li>Estudos e exercícios: <strong>programação em Python</strong> <em>(para a disciplina de Resolução de Problemas II): </em><br/>&nbsp;[<a href="https://github.com/ALREstevam/Curso-de-Python-e-Programacao-com-Python" target="_blank">github.com/ALREstevam/Curso-de-Python-e-Programacao-com-Python</a>]</li>
+                <li>Testes: <strong>com o Hibernate (Framework de persistência para o Java)</strong> <em>(para a disciplina de Engenharia de Software III): </em><br/>&nbsp;[<a href="https://github.com/ALREstevam/Hibernate-Java" target="_blank">github.com/ALREstevam/Hibernate-Java</a>]</li>
+                <li>Projeto: <strong>gerenciamento de visita a clientes para vidraçaria (em Java)</strong> <em>(para a disciplina de Programação Orientada a Objetos II): </em><br/>&nbsp;[<a href="https://github.com/ALREstevam/POOII-Gerenc-Visitas-Vidracaria" target="_blank">github.com/ALREstevam/POOII-Gerenc-Visitas-Vidracaria</a>]</li>
+                <li>Projeto: <strong>site para grupo de estudantes (HTML5, CSS3 e Javascript)</strong> <em>(para a disciplina de Programação para a Web): </em><br/>&nbsp;[<a href="https://github.com/ALREstevam/Programacao-Web-T1" target="_blank">github.com/ALREstevam/Programacao-Web-T1</a>]</li>
             </ul>
         </li>
     </ul>
 
 </section>
 
-<section class="sidebar css2">
+<div class="sidebar css2">
     <nav class="sideMenu">
         <ul>
 
@@ -129,10 +129,10 @@
 
     
     
-</section>
+</div>
 
 
-<!-- FOOTET -->
+<!-- FOOTER -->
 <footer class="footer centralizedText">
     <p>
         Website desenvolvido para a disciplina de Programação Web<br>
