--- a/site/html/concepts.html
+++ b/site/html/concepts.html
@@ -13,7 +13,7 @@
 
     <link type="text/css" rel="stylesheet" href="../styles/tests/testStylesheet.css">
     <link type="text/css" rel="stylesheet" href="../styles/common/commonStylesheet.css">
-    <link type="text/css" rel="stylesheet" href="" id="swappableCss">
+    <link type="text/css" rel="stylesheet" href="../styles/common/commonStylesheet.css" id="swappableCss">
 
     <script>
         setSheetList(['../styles/style1/css1.css','../styles/style2/css2.css']);
@@ -39,7 +39,7 @@
     </div>
 
     <!-- MENU -->
-    <section class="menu">
+    <div class="menu">
         <!-- MENU -->
         <nav class="menu">
             <ul>
@@ -49,78 +49,80 @@
                 <li><a href="concepts.html">Conceitos utilizados</a></li>
             </ul>
         </nav>
-    </section>
+    </div>
 </header>
 
 <!-- CONTEÚDO -->
 <section class="content">
-    <h1><div class="icon" style="background-image: url('../media/images/icons/icons8-Code.png'); min-height: 40pt"></div>Conceitos utilizados e não abordados na disciplina</h1>
-    <h2 id="html">HTML</h2>
+    <div class="icon iconTitle" style="background-image: url('../media/images/icons/icons8-Code.png'); min-height: 40pt">
+        <h2>Conceitos utilizados e não abordados na disciplina</h2>
+    </div>
+    <h3 id="html">HTML</h3>
 
-        <h3>Adicionando um ícone à página</h3>
+        <h4>Adicionando um ícone à página</h4>
         <pre class="code">
             <code>
-                &lt;head&gt;
-                ...
-                &lt;link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"&gt;
-                &lt;link rel="icon" href="/favicon.ico" type="image/x-icon"&gt;
-                ...
-                &lt;/head&gt;
+&lt;head&gt;
+...
+&lt;link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"&gt;
+&lt;link rel="icon" href="/favicon.ico" type="image/x-icon"&gt;
+...
+&lt;/head&gt;
             </code>
         </pre>
         <p>&nbsp;A tag &lt;link&gt; pode ser utilizada para importar uma imagem de &iacute;cone para a p&aacute;gina, deve ser inserido no header.</p>
 
         <hr/>
 
-        <h3>Importando um arquivo de código-fonte Javascript externo</h3>
+        <h4>Importando um arquivo de código-fonte Javascript externo</h4>
             <pre class="code">
                 <code>
-                    &lt;script src="../js/swapCss.js"&gt;
-                    &lt;/script&gt;
+&lt;script src="../js/swapCss.js"&gt;
+&lt;/script&gt;
                 </code>
             </pre>
     <p>Devem ser utilizadas as tags &lt;script&gt;&lt;/script&gt; definindo o caminho para o arquivo no atributo src=&rdquo;&rdquo;</p>
     <hr/>
 
-    <h3>Usando as tags <code>pre</code> e <code>code</code></h3>
+    <h4>Usando as tags <code>pre</code> e <code>code</code></h4>
             <pre class="code">
                 <code>
-                    &lt;pre&gt;
-                        &lt;code&gt;
-                            &amp;lt;script src="../js/swapCss.js"&amp;gt;
-                            &amp;lt;/script&amp;gt;
-                        &lt;/code&gt;
-                    &lt;/pre&gt;
+&lt;pre&gt;
+    &lt;code&gt;
+        &amp;lt;script src="../js/swapCss.js"&amp;gt;
+        &amp;lt;/script&amp;gt;
+    &lt;/code&gt;
+&lt;/pre&gt;
                 </code>
             </pre>
     <p>A tag <code>&lt;pre&gt;&lt;/pre&gt;</code> é utilizada para definir um texto pré-formatado. Espaços e quebras de linha serão mantidos na página da mesma forma como estão no documento HTML.</p>
     <p>A tag <code>&lt;code&gt;&lt;/code&gt;</code> é utilizada para indicar que seu conteúdo é um código em alguma linguagem de programaçãoo.</p>
     <hr/>
 
-    <h3>Atribuindo m&uacute;ltiplas classes a um elemento</h3>
+    <h4>Atribuindo m&uacute;ltiplas classes a um elemento</h4>
     <pre class="code">
         <code>
-            &lt;div class="box type5 linkFormat"&gt;
+&lt;div class="box type5 linkFormat"&gt;
         </code>
     </pre>
     <p>Um elemento pode receber várias classes separando-as por espaço.</p>
     <hr/>
 
-    <h3>Inserindo um vídeo do YouTube</h3>
+    <h4>Inserindo um vídeo do YouTube</h4>
     <pre class="code">
         <code>
-            &lt;iframe src="https://www.youtube.com/embed/-csXdj4WVwA?rel=0"<wbr> frameborder="0" allowfullscreen <wbr> class="videobox" &gt;<wbr>&lt;/iframe&gt;
+&lt;iframe src="https://www.youtube.com/embed/-csXdj4WVwA?rel=0"<wbr> frameborder="0" allowfullscreen <wbr> class="videobox" &gt;<wbr>&lt;/iframe&gt;
         </code>
     </pre>
     <p>Um v&iacute;deo pode ser inserido utilizando a tag <code>&lt;iframe&gt;&lt;/iframe&gt;</code> com o atributo <code>src=&rdquo;&rdquo;</code> seguindo o formato<code> https://www.youtube.com/embed/&lt;c&oacute;digo do v&iacute;deo&gt;?rel=0</code></p>
     <hr>
 
-    <h3>Player de áudio do HTML5</h3>
+    <h4>Player de áudio do HTML5</h4>
     <pre class="code">
         <code>
-            &lt;audio controls&gt;
-                &lt;source src="file.mp3" type="audio/mpeg"&gt;
-            &lt;/audio&gt;
+&lt;audio controls&gt;
+    &lt;source src="file.mp3" type="audio/mpeg"&gt;
+&lt;/audio&gt;
         </code>
     </pre>
     <p>
@@ -128,12 +130,12 @@
     </p>
     <hr/>
 
-    <h2 id="css">CSS</h2>
-    <h3>Atributo <code>position</code></h3>
+    <h3 id="css">CSS</h3>
+    <h4>Atributo <code>position</code></h4>
     <pre class="code">
         <code>
-            position: fixed;
-            position: absolute;
+position: fixed;
+position: absolute;
         </code>
     </pre>
     <p>
@@ -141,11 +143,11 @@
     </p>
     <hr/>
 
-    <h3>Atributo <code>border-radius</code></h3>
+    <h4>Atributo <code>border-radius</code></h4>
     <pre class="code">
         <code>
-            border-radius: 55px;
-            border-radius: 100%;
+border-radius: 55px;
+border-radius: 100%;
         </code>
     </pre>
     <p>
@@ -153,11 +155,11 @@
     </p>
     <hr/>
 
-    <h3>Atributo <code>visibility</code></h3>
+    <h4>Atributo <code>visibility</code></h4>
     <pre class="code">
         <code>
-            visibility: hidden;
-            visibility: visible;
+visibility: hidden;
+visibility: visible;
         </code>
     </pre>
     <p>
@@ -165,14 +167,14 @@
     </p>
     <hr/>
 
-    <h3>Atributo <code>text-shadow</code> e <code>box-shadow</code></h3>
+    <h4>Atributo <code>text-shadow</code> e <code>box-shadow</code></h4>
     <pre class="code">
         <code>
-            text-shadow: #030037 0 0 20px;
-            box-shadow: #3ad354 10px 10px 10px;
+text-shadow: #030037 0 0 20px;
+box-shadow: #3ad354 10px 10px 10px;
 
-            /*text-shadow: &lt;cor&gt; &lt;deslocamento x&gt; &lt;deslocamento y&gt; &lt;tamanho&gt;;
-            box-shadow: &lt;cor&gt; &lt;deslocamento x&gt; &lt;deslocamento y&gt; &lt;tamanho&gt;;*/
+/*text-shadow: &lt;cor&gt; &lt;deslocamento x&gt; &lt;deslocamento y&gt; &lt;tamanho&gt;;
+box-shadow: &lt;cor&gt; &lt;deslocamento x&gt; &lt;deslocamento y&gt; &lt;tamanho&gt;;*/
         </code>
     </pre>
     <p>
@@ -180,13 +182,13 @@
     </p>
     <hr/>
 
-    <h3>Definição de cor com <code>RGBA</code></h3>
+    <h4>Definição de cor com <code>RGBA</code></h4>
     <pre class="code">
         <code>
-            background-color: rgba(77, 226, 255, 0.82);
-            color: rgba(77, 226, 255, 0.82);
+background-color: rgba(77, 226, 255, 0.82);
+color: rgba(77, 226, 255, 0.82);
 
-            /*rgba(&lt;RED&gt;, &lt;GREEN&gt;, &lt;BLUE&gt;, &lt;ALPHA&gt;);*/
+/*rgba(&lt;RED&gt;, &lt;GREEN&gt;, &lt;BLUE&gt;, &lt;ALPHA&gt;);*/
         </code>
     </pre>
     <p>
@@ -194,11 +196,11 @@
     </p>
     <hr/>
 
-    <h3>Atributo <code>cursor</code></h3>
+    <h4>Atributo <code>cursor</code></h4>
     <pre class="code">
         <code>
-            cursor: pointer;
-            cursor: help;
+cursor: pointer;
+cursor: help;
         </code>
     </pre>
     <p>
@@ -206,12 +208,12 @@
     </p>
     <hr/>
 
-    <h3>Atributo <code>display</code></h3>
+    <h4>Atributo <code>display</code></h4>
     <pre class="code">
         <code>
-            display: table;
-            display: block;
-            display: flex;
+display: table;
+display: block;
+display: flex;
         </code>
     </pre>
     <p>
@@ -219,12 +221,12 @@
     </p>
     <hr/>
 
-    <h2 id="other">Outros - Javascript</h2>
+    <h3 id="other">Outros - Javascript</h3>
 
-    <h3>Comando <code>console.log([...]);</code></h3>
+    <h4>Comando <code>console.log([...]);</code></h4>
     <pre class="code">
         <code>
-            console.log(&lt;message&gt;);
+console.log(&lt;message&gt;);
         </code>
     </pre>
     <p>
@@ -232,14 +234,14 @@
     </p>
     <hr/>
 
-    <h3><code>localStorage</code></h3>
+    <h4><code>localStorage</code></h4>
     <pre class="code">
         <code>
-            localStorage.setItem('swap', index);
-            var current = localStorage.getItem('swap');
+localStorage.setItem('swap', index);
+var current = localStorage.getItem('swap');
 
-            //localStorage.setItem(&lt;key&gt;, &lt;value&gt;);
-            //var readed = localStorage.getItem(&lt;key&gt;);
+//localStorage.setItem(&lt;key&gt;, &lt;value&gt;);
+//var readed = localStorage.getItem(&lt;key&gt;);
         </code>
     </pre>
     <p>
@@ -249,7 +251,7 @@
     <hr/>
 </section>
 
-<section class="sidebar css2">
+<div class="sidebar css2">
     <nav class="sideMenu">
         <ul>
 
@@ -281,7 +283,7 @@
         </ul>
     </nav>
 
-</section>
+</div>
 
 
 <!-- FOOTET -->
